--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ buildscript {
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
         implementation fg.deobf("dev.latvian.mods:kubejs-forge:1802.5.5-build.567")
-        implementation fg.deobf("dev.latvian.mods:rhino:1802.2.1-build.255")
+        implementation fg.deobf("dev.latvian.mods:rhino-forge:1802.2.1-build.255")
         implementation fg.deobf("dev.architectury:architectury-forge:4.10.88")
     }
 }
